# Spectra

./: CMakeLists.txt  WriteMacros.py  WriteMacros.sh  pass-to-blade.sh  spectra.cc  template.mac  template.sh  test.mac  test.sh
Analysis/: Spectra.py  xSpectra.py
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  HadronElasticPhysicsHP.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SpectraHit.hh  SpectraSD.hh  StackingAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  HadronElasticPhysicsHP.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SpectraHit.cc  SpectraSD.cc  StackingAction.cc  SteppingAction.cc
